RESOLVED FIXED173497
AX: VoiceOver can change the value of disabled sliders
https://bugs.webkit.org/show_bug.cgi?id=173497
Summary AX: VoiceOver can change the value of disabled sliders
James Craig
Reported 2017-06-16 15:38:32 PDT
AX: VoiceOver can change the value of disabled sliders 1. Open the attached test case. 2. Drag the slider with a mouse (no change, expected) 3. Tab to the slider and use arrows, home/end, or pageup/pagedown (no change, expected) 4. Navigate to the slider with VoiceOver, interact (VO+Shift+Down) and change the value (VO+Right) VoiceOver speaks dimmed (expected) but the slider value updates and the display changes. <input type='range' disabled>
Attachments
test case (29 bytes, text/html)
2017-06-16 15:39 PDT, James Craig
no flags
Patch (4.03 KB, patch)
2019-02-01 17:32 PST, Eric Liang
no flags
Patch (4.03 KB, patch)
2019-02-01 17:46 PST, Eric Liang
no flags
Patch (5.12 KB, patch)
2019-02-04 11:29 PST, Eric Liang
no flags
James Craig
Comment 1 2017-06-16 15:39:27 PDT
Created attachment 313148 [details] test case
Radar WebKit Bug Importer
Comment 2 2017-06-16 15:39:42 PDT
Eric Liang
Comment 3 2019-02-01 17:32:30 PST
chris fleizach
Comment 4 2019-02-01 17:35:35 PST
Comment on attachment 360928 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360928&action=review > Source/WebCore/accessibility/AccessibilityNodeObject.cpp:1067 > +// auto element = this->element(); whats going on with this?
Eric Liang
Comment 5 2019-02-01 17:42:06 PST
Sorry forgot to uncomment after test...
Eric Liang
Comment 6 2019-02-01 17:46:04 PST
chris fleizach
Comment 7 2019-02-01 17:49:55 PST
Comment on attachment 360933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360933&action=review > LayoutTests/accessibility/set-value-not-work-for-disabled-sliders.html:25 > + for (var testId = 0; testId < numOfTests; testId++) { there's no expected results added here
Eric Liang
Comment 8 2019-02-01 17:54:30 PST
Comment on attachment 360933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=360933&action=review >> LayoutTests/accessibility/set-value-not-work-for-disabled-sliders.html:25 >> + for (var testId = 0; testId < numOfTests; testId++) { > > there's no expected results added here If should-change="true", then the expected is always 50, otherwise 50->55->45?
Eric Liang
Comment 9 2019-02-04 11:29:55 PST
WebKit Commit Bot
Comment 10 2019-02-04 13:03:25 PST
Comment on attachment 361076 [details] Patch Clearing flags on attachment: 361076 Committed r240939: <https://trac.webkit.org/changeset/240939>
WebKit Commit Bot
Comment 11 2019-02-04 13:03:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.