Source/WebCore: When performing Increment or Decrement on sliders, check to see if the slider is disabled. https://bugs.webkit.org/show_bug.cgi?id=173497

Patch by Eric Liang <ericliang@apple.com> on 2019-02-04
Reviewed by Chris Fleizach.

Test: accessibility/set-value-not-work-for-disabled-sliders.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::alterSliderValue):

LayoutTests:
Check if slider value changed after calling AX Increment or Decrement on disabled sliders.
https://bugs.webkit.org/show_bug.cgi?id=193497

Patch by Eric Liang <ericliang@apple.com> on 2019-02-04
Reviewed by Chris Fleizach.

* accessibility/set-value-not-work-for-disabled-sliders.html: Added.

Canonical link: https://commits.webkit.org/208699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240939 268f45cc-cd09-0410-ab3c-d52691b4dbfc